// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IssuesTraceTree FromSpans collapses spans 1`] = `
"
collapsed
    transaction 2 - transaction.op
      collapsed
      db - SELECT
      cache - GET
      http - GET /
      db - SELECT
"
`;

exports[`IssuesTraceTree collapsed nodes without errors 1`] = `
"
collapsed
  transaction 1 - transaction.op
  transaction 2 - transaction.op
  transaction 3 - transaction.op
  transaction 4 - transaction.op
  transaction 5 - transaction.op
"
`;

exports[`IssuesTraceTree errors only 1`] = `
"
trace root
  error
  error
  error
  error
  error
  error
  error
  error
  error
  error
  error
  error
  collapsed
"
`;

exports[`IssuesTraceTree preserves path to child error 1`] = `
"
trace root
  transaction 1 - transaction.op
  transaction 2 - transaction.op
    transaction - transaction.op
  transaction 4 - transaction.op
"
`;

exports[`IssuesTraceTree respects minShownNodes parameter: default minShownNodes (3) 1`] = `
"
collapsed
  transaction 3 - transaction.op
  transaction 4 - transaction.op
  transaction 5 - transaction.op
"
`;

exports[`IssuesTraceTree respects minShownNodes parameter: smaller minShownNodes (0) 1`] = `
"
collapsed
  transaction 3 - transaction.op
  collapsed
"
`;

exports[`IssuesTraceTree respects numSurroundingNodes parameter: custom surrounding nodes (2) 1`] = `
"
collapsed
  transaction 2 - transaction.op
  transaction 3 - transaction.op
  transaction 4 - transaction.op
  collapsed
"
`;

exports[`IssuesTraceTree respects numSurroundingNodes parameter: default surrounding nodes (3) 1`] = `
"
collapsed
  transaction 1 - transaction.op
  transaction 2 - transaction.op
  transaction 3 - transaction.op
  transaction 4 - transaction.op
  transaction 5 - transaction.op
"
`;
